--- a/Calculator/styles.css
+++ b/Calculator/styles.css
@@ -25,7 +25,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: white;
 }
 
 
